--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t tomorron/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run tomororn/docker-react npm run test -- --coverage
+  - docker run tomorron/docker-react npm run test -- --coverage
